--- a/css/main.css
+++ b/css/main.css
@@ -202,67 +202,115 @@ button:disabled {
   box-shadow: none;
 }
 
+@media (max-width: 1024px) {
+  #replay,
+  #sound,
+  #playTable {
+    display: none;
+  }
 
-/*  need to do responsive !!! below */
-
-@media  (min-width: 769px) and (max-width: 1279px) {
-  h1 {
-    font-size: 3rem;
 }
-main {
-    height: 70vmin;
-    width: 70vmin;
-}
-#scoreText > p, button {
-    font-size: 1rem;
-}
-#scoreScreen > div {
-    font-size: 3.5rem;
-}
-button {
-    height: 3rem;
-    padding: 0 1.5rem;
-}
-}
-
-/* Tablets & Larger Smartphones (481-768px) */
-@media (min-width: 481px) and (max-width: 768px) {
-  h1 {
-    font-size: 2.5rem;
-}
-main {
-    height: 60vmin;
-    width: 60vmin;
-}
-#scoreText > p, button {
-    font-size: 0.6rem;
-}
-#scoreScreen > div {
-    font-size: 3rem;
-}
-button {
-    height: 2.5rem;
-    padding: 0 1.25rem;
-}
-}
-
 
 @media (max-width: 480px) {
+
+  .firstPage {
+    height: 80vh;
+    padding: 10px;
+  }
+
   h1 {
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  main {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+  }
+
+
+  #slotScreen {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 30vh; /* Reduce the height */
+  }
+
+  #slotScreen > div {
+    width: 35%;
+    height: 100%; 
+  }
+
+  #slotScreen > div > img {
+    width: 90%;
+    
+  }
+
+
+
+  /* New section for buttons below the slot screen */
+  #controlButtons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
+  }
+
+  #replay,
+  #sound {
+    height: 2.5rem;
+    padding: 0 1.25rem;
+    font-size: 1rem;
+  }
+
+
+  #scoreText,
+  #scoreScreen {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 10px 0;
+  }
+
+  #scoreText > p,
+  #scoreScreen > div {
+    margin-top: 20px;
+    text-align: center;
+    align-items: center;
+  }
+
+  #scoreText > p{
+    font-size: 0.7rem;
+  }
+
+  #scoreScreen > div {
     font-size: 2rem;
-}
-main {
-    height: 50vmin;
-    width: 50vmin;
-}
-#scoreText > p, button {
-    font-size: 0.5rem;
-}
-#scoreScreen > div {
-    font-size: 2.5rem;
-}
-button {
-    height: 2rem;
-    padding: 0 1rem;
-}
+  }
+
+  #buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  #playTable {
+    display: none;
+  }
+
+
+
+  button {
+    height: 2.5rem;
+    padding: 0 1.25rem;
+    font-size: 1rem;
+  }
 }
